--- a/src/img/scss/base/_variables.scss
+++ b/src/img/scss/base/_variables.scss
@@ -6,3 +6,10 @@ $amarillo: #fdda00;
 $morado: #752F97;
 $negro: #000000;
 $blanco: #FFFFFF;
+
+// media quieries
+
+$telefono : 480px;
+$tablet : 768px;
+$desktop : 1200px;
+$desktopxl : 1400px;
