--- a/src/img/scss/layout/_galeria.scss
+++ b/src/img/scss/layout/_galeria.scss
@@ -19,6 +19,7 @@
         img{
             height: 20rem;
             object-fit: cover;
+            cursor: pointer;
         }
     }
 }
@@ -26,4 +27,46 @@
     position: fixed;
     inset: 0;
     background-color: rgba(v.$negro, 0.5 );
+    display: grid;
+    place-items: center;
+    animation: fadeIn ease-in 0.5s;
+    &.fade-out{
+        animation: fadeOut ease-in 0.5s;
+    }
+    img {
+        max-width: 100rem;
+    }
+}
+.btn-cerrar {
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    background-color: v.$blanco;
+    border: none;
+    color: v.$negro;
+    display: grid;
+    place-items: center;
+    font-weight: 700;
+    cursor: pointer;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.329),
+    0 0 15px rgba(0, 0, 0, 0.288),
+    0 0 30px rgba(0, 0, 0, 0.226);
+}
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+@keyframes fadeOut {
+    0% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+    }
 }
